# pma-technical-assessment-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py
app/routers/: export.py  weather.py
app/schemas/: weather.py
app/services/: integrations.py  weather_api.py
